# HaskellLandPublic

./: .gitignore  README.md
HaskellAPI/haskpi/: CHANGELOG.md  README.MD  haskpi.cabal
HaskellAPI/haskpi/app/: Main.hs
HaskellAPI/haskpi/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
HaskellAdv/: blackjack.hs
HaskellArchi/: notes.MD
HaskellBasics/: 01.hs  02.txt  02_piping  02_piping.hs  03_dot_prod.hs  04_args.hs  05_3np1.hs  06_anony_func_lambda.hs  07_arrays.hs  08_rand_layer.hs  09_rand_multi.hs  10_offset_dot.hs  11_list_recursion.hs  12_lookup_tables.hs  13_loop_n_times.hs  14_higher_order.hs  15_binary_tree.hs  16_maybe_either_137.hs  17_writer_137.hs  18_misc.hs  run.sh
HaskellE2E/: notes.MD
HaskellE2E/SudokuSolver/: main.hs
HaskellE2E/TicTacToeBot/: main.hs
HaskellGL/: keys.hs  main.hs  run.sh
HaskellPlayground/: byte_playground.hs  http_only.hs  https_only.hs  img_data.hs  juicy_test.hs  regex_playground.hs  run_juicy.sh
HaskellScraper/: colors.hi  hreaded
HaskellScraper/PyScraper/: pyScraper.py  pyScraperwith1.py
HaskellSpeed/: 01_thunk_map.hs  02_rpar_rseq.hs  03_parallelizing_sudoku.hs  04_dynamic_par_sudoku.hs  05_param_strats_sudoku.eventlog  05_param_strats_sudoku.hs  NOTES.txt  ThirdPartySudoku.hs  run.sh  run_windows.sh  sudoku_run.sh
MonadLand/: NOTES.md  state_monad_00.hs  state_pg.hs
StmArchitecture/: README.md  STMSanta  STMSanta.hs
StmArchitecture/01_hEchoLine/: 01  01.hs  hEchoLineTxt.txt
StmArchitecture/02_incRef_mutable/: 02  02.hs
(+12 files in other folders)
