cabal-version:      2.4
name:               haskpi
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Trevor Knott
maintainer:         tknott95@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskpi
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    wai,
      aeson,
      transformers,
      warp,
      wai,
      time,
      servant-server,
      servant,
      base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
    -- ghc-options: -lHSrandom, -lHSsplitmix
    -- extra-libraries: HSrandom, HSsplitmix

-- -lHSrandom
-- -lHSsplitmix
